# hinotori-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/hinotori-core/: hinotori-core_global.h  hinotori.cpp  hinotori.h  question.cpp  question.h  questionnaire.cpp  questionnaire.h
